# writer-app

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  modal_app.py  package.json  pyproject.toml  rxconfig.py
.github/workflows/: deploy-modal.yml
app/: lorebook_store.py  openrouter.py
data/: lorebook.json  story.duckdb
docs/frontend/: FRONTEND_DESIGN.md  ai_assisted_story_writer_mock_ui_dev_guide.jsx
frontend-ts/: .env.local.example  .gitignore  next.config.js  package-lock.json  package.json
frontend-ts/data/: base_settings.json  storycraft.duckdb
frontend-ts/src/app/: globals.css  layout.tsx  page.tsx
frontend-ts/src/components/: ErrorBoundary.tsx
frontend-ts/src/hooks/: useExperimentalDarkMode.ts  usePersistAppState.ts  useStoryGeneration.ts  useStorySync.ts
frontend-ts/src/lib/: api.ts  errors.ts  saveQueue.ts  types.ts  utils.ts
frontend-ts/src/stores/: appStore.ts  campaignStore.ts  simpleGameStore.ts
frontend/tiptap-reflex-wrapper/: index.js  package.json  tiptap-reflex-wrapper-0.0.1.tgz
scripts/: setup_supabase.py
src/storycraft/app/: base_settings_store.py  config.py  (+17 more)
src/storycraft_frontend/: __init__.py  state.py  storycraft_frontend.py
storycraft_frontend/: __init__.py  state.py
storycraft_frontend/pages/: index.py
tests/: conftest.py  test_backend_starts.py  test_context_and_settings.py  test_duckdb_client.py  test_generation_and_prompt.py  test_local_mode_activation.py  test_reflex_imports.py  test_snippet_store.py  test_snippets_api.py  test_stories_api.py  test_story_settings_api.py
tools/: seed.py
(+63 files in other folders)
