[project]
name = "storycraft"
version = "0.1.0"
description = "AI-assisted novel/story writing app with FastAPI backend and Reflex frontend, using OpenRouter LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "reflex>=0.5.7",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=8.3",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100

