[project]
name = "storycraft"
version = "0.1.0"
description = "AI-assisted novel/story writing app with a FastAPI backend, using OpenRouter LLMs"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Your Name" }]
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "supabase>=2.21.1",
  "psycopg[binary]>=3.2",
  "modal>=1.1.4",
]


[dependency-groups]
dev = [
  "ruff>=0.5",
  "pytest>=8.3",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100

# Build system and packaging (src/ layout)
[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

# Hatchling build config for src/ layout.
[tool.hatch.build.targets.wheel]
packages = [
  "src/storycraft",
]
